# sgc

./: README.md
hardware/: .gitignore  README.md  anomal.py
web/: .env.example  .gitignore  Makefile  README.md  package.json  pyproject.toml  quasar.config.js  setup.cfg
web/private/: .gitignore
web/server/: app.py
web/server/models/: __init__.py  example.py  recording.py  signal.py  user.py
web/server/models/migrations/models/: 1_20241010121440_None.py  2_20241010122725_update.py  3_20241010143136_update.py  4_20241010143245_update.py  5_20241010150822_update.py
web/server/routes/: example.py  user.py
web/server/schemas/: __init__.py  example.py  recording.py  signal.py  user.py
web/server/settings/base/: __init__.py  auth.py  paths.py
web/server/settings/database/: __init__.py  connect.py
web/server/settings/environments/: default.py
web/server/settings/utils/: environments.py
web/server/utils/: __init__.py  token.py
web/src/store/: index.ts
